Added Images to Assets

--- a/SwiftURLandMapKit Assignment/View/Base.lproj/Main.storyboard
+++ b/SwiftURLandMapKit Assignment/View/Base.lproj/Main.storyboard
@@ -18,19 +18,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="AkE-de-h5J">
-                                <rect key="frame" x="0.0" y="140" width="375" height="202"/>
+                                <rect key="frame" x="0.0" y="140" width="375" height="238"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="202" id="BvG-i6-4X1"/>
+                                    <constraint firstAttribute="height" constant="238" id="BvG-i6-4X1"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="n5X-3t-zYa"/>
                                 </connections>
                             </mapView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JuJ-Od-UEj">
-                                <rect key="frame" x="0.0" y="344" width="375" height="468"/>
+                                <rect key="frame" x="0.0" y="379" width="375" height="433"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="468" id="y0N-Dg-6bQ"/>
+                                    <constraint firstAttribute="height" constant="433" id="y0N-Dg-6bQ"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DataCell" rowHeight="120" id="QQL-Xi-zgy" customClass="CarDeatilsTableViewCell" customModule="SwiftURLandMapKit_Assignment" customModuleProvider="target">
@@ -40,7 +40,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="119.66666666666667"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="YuZ-qa-l2v">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="YuZ-qa-l2v">
                                                     <rect key="frame" x="139" y="15" width="97" height="83"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Model Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l9t-O9-eNM">
@@ -57,7 +57,7 @@
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bkf-Xb-alF">
                                                             <rect key="frame" x="0.0" y="66.666666666666671" width="97" height="16.333333333333329"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -105,9 +105,9 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="JuJ-Od-UEj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AkE-de-h5J" secondAttribute="bottom" constant="2" id="6Un-az-Kg1"/>
+                            <constraint firstItem="JuJ-Od-UEj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AkE-de-h5J" secondAttribute="bottom" id="6Un-az-Kg1"/>
                             <constraint firstItem="JuJ-Od-UEj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Lhm-FT-IE8"/>
                             <constraint firstItem="AkE-de-h5J" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SOw-uI-Ad5"/>
                             <constraint firstAttribute="bottom" secondItem="JuJ-Od-UEj" secondAttribute="bottom" id="X4Y-4b-NUq"/>
@@ -136,7 +136,7 @@
                         <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="15"/>
+                            <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="17"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <fontDescription key="fontDescription" name="AmericanTypewriter-Semibold" family="American Typewriter" pointSize="40"/>
